
  Overview of changes in EtherApe 0.9.14 ():
   EtherApe now users the system /etc/services file instead of its own.
   While this change make some customizations a bit harder, it guarantees an
   up-to-date services file.
   Note to packagers: /etc/etherape is not needed anymore.

   Central node option now undestands CIDR notation, allowing for a central
   ring of nodes.


   Changes summary:
     * autoconf updated to 2.69
     * fixed incorrect WLAN control frames decoding
     * fix UTF-8 encoding of several files, thanks to StrPt.
     * read system services file instead of EtherApe one, thanks to Zev Weiss.
     * fix race condition on exit, thanks to Zev Weiss
     * central ring option, thanks to Zev Weiss
     * tweaks to preference windows to better work with tiling managers,
       thanks to Zev Weiss.


  Overview of changes in EtherApe 0.9.13 (Sun May 05, 2013):
   Central node option, useful for displaying routers or proxies.
   Translations and documentation updates, plus some fixes.

   Changes summary:
     * Optional central node, based on work of Javier Fernandez-Sanguino 
       Peña.
     * re-enabled full-screen mode, thanks to nrvale0
     * Updated spanish translation, thanks to Javier Fernandez-Sanguino 
       Peña.
     * Added German translation, and fixed typos, thanks to Chris Leick.
     * Updated documentation.


  Overview of changes in EtherApe 0.9.12 (Tuesday May 31, 2011):
   This is a bug fix release.
   David Goldfarb discovered a critical bug in EtherApe, causing a 
   NULL pointer indirection with RPC traffic.
   This bug has security implications, because can be exploited to a 
   (remote) DOS attack.
   Packet content is not involved, however, so no privilege escalation 
   should happen (unless the machine is already subverted by other means). 

   Changes summary:
     * fix bug 3309061 (CVE-2011-3369)


  Overview of changes in EtherApe 0.9.11 (Friday May 27, 2011):