@@ -28,6 +28,9 @@ Javier Fernandez-Sanguino Peña
 David Flamand	<dflamand@gmail.com>
   Patches for IPv6 support
 
+Glenn Feuntun   <glenn.feunteun@orange.com>
+  Background image
+
 Riccardo Ghetta <bchiara@users.sourceforge.net>
   developer
 
